@@ -29,8 +29,8 @@ public:
   AppUtilUnix(IEventQueue *events);
   virtual ~AppUtilUnix();
 
-  int run(int argc, char **argv);
-  void startNode();
+  int run(int argc, char **argv) override;
+  void startNode() override;
   std::vector<String> getKeyboardLayoutList() override;
   String getCurrentLanguageCode() override;
   void showNotification(const String &title, const String &text) const override;
