@@ -15,25 +15,21 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include "synergy/ArgParser.h"
-#include "synergy/ServerArgs.h"
-
 #define TEST_ENV
 
+#include "synergy/ArgParser.h"
 #include "synergy/ServerApp.h"
+#include "synergy/ServerArgs.h"
 
 #include <gmock/gmock.h>
+#include <gtest/gtest.h>
+
+using ::testing::NiceMock;
 
 class MockServerApp : public ServerApp {
 public:
   MockServerApp() : ServerApp(nullptr, nullptr) {}
 };
-
-#include <gtest/gtest.h>
-
-// using ::testing::_;
-// using ::testing::Invoke;
-using ::testing::NiceMock;
 
 TEST(ServerAppTests, runInner_will_handle_configuration_lifetime) {
   NiceMock<MockServerApp> app;
@@ -45,4 +41,23 @@ TEST(ServerAppTests, runInner_will_handle_configuration_lifetime) {
       1, const_cast<char **>(argv), nullptr, [](int, char **) { return 0; });
 
   EXPECT_TRUE(app.args().m_config);
+}
+
+TEST(ServerAppTests, version_printsYear) {
+  NiceMock<MockServerApp> app;
+  std::stringstream buffer;
+  std::streambuf *old = std::cout.rdbuf(buffer.rdbuf());
+
+  app.version();
+
+  std::cout.rdbuf(old);
+
+#ifdef WIN32
+  // regex is god awful on windows, so just check that there is a copyright
+  EXPECT_THAT(buffer.str(), testing::HasSubstr("Symless Ltd."));
+#else
+  std::string expectedPattern =
+      ".*Copyright \\(C\\) [0-9]{4}-[0-9]{4} Symless Ltd.*";
+  EXPECT_THAT(buffer.str(), testing::MatchesRegex(expectedPattern));
+#endif // WIN32
 }
